data/derived/fa15/progs/unify/prog1683.ml.out
Characters 73-74:
  |Sine(e)->sin(pi*.e)
                    ^
Error: This expression has type expr but an expression was expected of type
         float
